--- a/GameData/Knes/Localization/MRK_en-us.cfg
+++ b/GameData/Knes/Localization/MRK_en-us.cfg
@@ -47,7 +47,7 @@ Localization
 				
 				#autoLOC_MRK_151 = ECBM (for MRK)
 				#autoLOC_MRK_152 = The Enhanced Common Berthing Mechanism is a specialized Passive variant of the Common Berthing Mechanism for use with the Multi-Role Kapsule. 
-				#autoLOC_MRK_153 = Toggle ECBM euide plates
+				#autoLOC_MRK_153 = Toggle ECBM guide plates
 				#autoLOC_MRK_154 = Deploy ECBM guide plates
 				#autoLOC_MRK_155 = Retract ECBM guide plates
 				
@@ -69,7 +69,11 @@ Localization
 				
 				#autoLOC_MRK_191 = MRK Launch Escape System
 				#autoLOC_MRK_192 = This solid rocket tower is designed to wrench the command pod up and away from a malfunctioning rocket.
-		 				
+				
+				// --- Docking Port2 ---
+				
+				#autoLOC_MRK_201 = Active ECBM (for MRK)
+				#autoLOC_MRK_202 = The Enhanced Common Berthing Mechanism is a specialized Passive variant of the Common Berthing Mechanism for use with the Multi-Role Kapsule. 	 				
 				
 		 }
 }
