--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_ECBM.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_ECBM.cfg
@@ -57,13 +57,87 @@ tags = ISS CxA CBM docking MRK enhanced Knes
 	{
 		name = ModuleDockingNode
 		referenceAttachNode = top
-		nodeType = IACBM_125
+		nodeType = ht2_CBM
 		stagingEnabled = False
-		acquireForce =  0.15
-		acquireTorque = 0.15
-		//acquireRange = 0.5
-
 	}	
-
-
+    MODULE
+    {
+        name = ModuleColorChanger
+        shaderProperty = _EmissiveColor
+        animRate = 0.8
+        animState = false
+        useRate = true
+        toggleInEditor = true
+        toggleInFlight = true
+        toggleInFlight = true
+        unfocusedRange = 5
+        toggleName = #autoLOC_502011 //#autoLOC_502011 = Toggle Lights
+        eventOnName = #autoLOC_502012 //#autoLOC_502012 = Lights On
+        eventOffName = #autoLOC_502013 //#autoLOC_502013 = Lights Off
+        toggleAction = True
+        defaultActionGroup = Light
+        redCurve
+        {
+            key = 0 0 0 3
+            key = 1 1 0 0
+        }
+        greenCurve
+        {
+            key = 0 0 0 1
+            key = 1 1 1 0
+        }
+        blueCurve
+        {
+            key = 0 0 0 0
+            key = 1 0.7 1.5 0
+        }
+        alphaCurve
+        {
+            key = 0 1
+        }
+    }	
+	MODULE
+	{
+		name = ModulePartVariants
+		baseVariant = Hatch
+		VARIANT
+		{
+			name = Hatch
+			displayName = Hatch
+			primaryColor = #ffffff
+			secondaryColor = #999999
+			sizeGroup = GroupB
+			GAMEOBJECTS
+			{
+				Interior = true
+				Cover = false					
+			}
+		}	
+		VARIANT
+		{
+			name = Dock
+			displayName =  Dock
+			primaryColor = #ffffff
+			secondaryColor = #ffffff
+			sizeGroup = GroupA
+			GAMEOBJECTS
+			{
+				Interior = false
+				Cover = false				
+			}		
+		}
+		VARIANT
+		{
+			name = Cover
+			displayName =  Cover
+			primaryColor = #ffffff
+			secondaryColor = #878574
+			sizeGroup = GroupC
+			GAMEOBJECTS
+			{
+				Interior = True
+				Cover = True				
+			}		
+		}		
+	}		
 }
