Solar Panel update

--- a/GameData/Knes/Localization/MRK_en-us.cfg
+++ b/GameData/Knes/Localization/MRK_en-us.cfg
@@ -32,11 +32,11 @@ Localization
                 // --- Solar Panel ---
                 
                 #autoLOC_MRK_131 = MRK-3a Solar Panel 
-                #autoLOC_MRK_132 = This solar panel is designed to fit snugly into the Multi-Role Kapsule's Service Module, where it integrates quite nicely into the stack. Ensure you stow it prorpely before fitting, fouling and breakage may occur otherwise. NOT RETRACTABLE
+                #autoLOC_MRK_132 = This solar panel is designed to fit snugly into the Multi-Role Kapsule's Service Module, where it integrates quite nicely into the stack. Ensure you stow it prorpely before fitting, fouling and breakage may occur otherwise. 
                 #autoLOC_MRK_133 = MRK-3b Solar Panel
-				#autoLOC_MRK_134 = This solar panel is designed to fit as a pair into the Multi-Role Kapsule's Payload Module, here it can be covvered by a fairing during launch. Ensure you stow it prorpely before fitting, fouling and breakage may occur otherwise. NOT RETRACTABLE
+				#autoLOC_MRK_134 = This solar panel is designed to fit as a pair into the Multi-Role Kapsule's Payload Module, here it can be covvered by a fairing during launch. Ensure you stow it prorpely before fitting, fouling and breakage may occur otherwise. 
 				#autoLOC_MRK_135 = MRK-30a Solar Array
-				#autoLOC_MRK_136 = Using the technology proven with the MRK-3b solar panels, a larger version has been manufactured using a telecopic extension. This solar array is intended for larger orbiting structures, like stations. NOT RETRACTABLE
+				#autoLOC_MRK_136 = Using the technology proven with the MRK-3b solar panels, a larger version has been manufactured using a telecopic extension. This solar array is intended for larger orbiting structures, like stations. 
 				
                 // --- Parachute ---
                 
@@ -73,7 +73,14 @@ Localization
 				// --- Docking Port2 ---
 				
 				#autoLOC_MRK_201 = Active ECBM (for MRK)
-				#autoLOC_MRK_202 = The Enhanced Common Berthing Mechanism is a specialized Passive variant of the Common Berthing Mechanism for use with the Multi-Role Kapsule. 	 				
+				#autoLOC_MRK_202 = The Enhanced Common Berthing Mechanism is a specialized Passive variant of the Common Berthing Mechanism for use with the Multi-Role Kapsule. 
+
+                // --- Solar Panel - Track ---
 				
+                #autoLOC_MRK_211 = MRK-3c Solar Panel 				
+				#autoLOC_MRK_212 = This solar panel is designed to fit as a pair into the Multi-Role Kapsule's Payload Module, here it can be covered by a fairing during launch. Ensure you stow it prorpely before fitting, fouling and breakage may occur otherwise.	This new variant track the sun.			
+				
+                #autoLOC_MRK_221 = MRK-1A Solar Panel 				
+				#autoLOC_MRK_222 = This solar panel is designed to fit as a pair into the Multi-Role Kapsule's Payload Module, here it can be covered by a fairing during launch. Ensure you stow it prorpely before fitting, fouling and breakage may occur otherwise.	This new variant track the sun.					
 		 }
 }
