--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SM_Extended.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SM_Extended.cfg
@@ -136,14 +136,14 @@ MODULE
 	RESOURCE
 	{
 		name = SolidFuel
-		amount = 2 // TESTING REUIRED
-		maxAmount = 2 // TESTING REQUIRED
+		amount = 2
+		maxAmount = 2
 	}
 	RESOURCE
 	{
 		name = MonoPropellant
-		amount = 200 // TESTING REUIRED
-		maxAmount = 200 // TESTING REQUIRED
+		amount = 250
+		maxAmount = 250
 	}
 	RESOURCE
 	{
