--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SM_Rescue.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SM_Rescue.cfg
@@ -128,14 +128,14 @@ MODULE
 	RESOURCE
 	{
 		name = SolidFuel
-		amount = 2 // TESTING REUIRED
-		maxAmount = 2 // TESTING REQUIRED
+		amount = 2
+		maxAmount = 2
 	}
 	RESOURCE
 	{
 		name = MonoPropellant
-		amount = 100 // TESTING REUIRED
-		maxAmount = 100 // TESTING REQUIRED
+		amount = 100
+		maxAmount = 100
 	}
 	RESOURCE
 	{
