--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SolarPanel.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SolarPanel.cfg
@@ -46,6 +46,8 @@ MODULE
     animationName = deployPanel
     secondaryTransformName = sunCatcher
     pivotName = sunPivot
-	
+	extendActionName = #autoLOC_6001805 //#autoLOC_6001805 = Extend <<1>>
+	retractActionName = #autoLOC_6001806 //#autoLOC_6001806 = Retract <<1>>
+	extendpanelsActionName = #autoLOC_6001807 //#autoLOC_6001807 = Toggle <<1>>	
 }
 }
