--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SolarPanel_Pyld_Track.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SolarPanel_Pyld_Track.cfg
@@ -1,11 +1,11 @@
 PART
 {
-name = _Knes_mrk_SolarPanel_Pyld
+name = _Knes_mrk_SolarPanel_Pyld_Track
 module = Part
 author = steedcrugeon & Well
     MODEL
     {
-        model = Knes/Parts/MultiRoleKapsule/Assets/_Knes_mrk_SolarPanel_Pyld
+        model = Knes/Parts/MultiRoleKapsule/Assets/_Knes_mrk_SolarPanel_Pyld_Track
     }
  rescaleFactor = 0.75
  
@@ -19,9 +19,9 @@ cost = 450
 category = Electrical
 subcategory = 0
 mass = 0.07
-title = #autoLOC_MRK_133
+title = #autoLOC_MRK_211
 manufacturer = Knes
-description = #autoLOC_MRK_134
+description = #autoLOC_MRK_212
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
@@ -37,7 +37,7 @@ tags = array charge deploy elect energ generat photo light power solar sun volt 
 MODULE
 {
     name = ModuleDeployableSolarPanel
-    isTracking = false
+    isTracking = true
     resourceName = ElectricCharge
 	impactResistance = 2
 	impactResistanceRetracted = 4	
