--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SolarPanel_Nano.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_SolarPanel_Nano.cfg
@@ -1,27 +1,27 @@
 PART
 {
-name = _Knes_mrk_SolarPanel_Pyld
+name = _Knes_mrk_SolarPanel_Nano
 module = Part
 author = steedcrugeon & Well
     MODEL
     {
-        model = Knes/Parts/MultiRoleKapsule/Assets/_Knes_mrk_SolarPanel_Pyld
+        model = Knes/Parts/MultiRoleKapsule/Assets/_Knes_mrk_SolarPanel_Nano
     }
- rescaleFactor = 0.75
+ rescaleFactor = 1
  
 node_stack_top = 0.0, 0.025, 0.0, 0, 1, 0, 1
 node_attach = 0.0, 0.05, 0.0, 0, 1, 0
 attachRules = 1,1,0,0,0
 
 TechRequired = advElectrics
-entryCost = 4000
-cost = 450
+entryCost = 2500
+cost = 250
 category = Electrical
 subcategory = 0
-mass = 0.07
-title = #autoLOC_MRK_133
+mass = 0.04
+title = #autoLOC_MRK_221
 manufacturer = Knes
-description = #autoLOC_MRK_134
+description = #autoLOC_MRK_222
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
@@ -32,16 +32,16 @@ bulkheadProfiles = size0, srf
 thermalMassModifier = 2.0
 emissiveConstant = 0.95
 heatConductivity = 0.4 // 1/3 default as per stock
-tags = array charge deploy elect energ generat photo light power solar sun volt unfold mrk knes
+tags = array charge deploy elect energ generat photo light power solar sun volt unfold MRK Knes
 
 MODULE
 {
     name = ModuleDeployableSolarPanel
-    isTracking = false
+    isTracking = true
     resourceName = ElectricCharge
 	impactResistance = 2
 	impactResistanceRetracted = 4	
-    chargeRate = 1.8
+    chargeRate = 1.75
     retractable = true
     animationName = deployPanel
     secondaryTransformName = sunCatcher
