Mrk IVA fix + changelog

--- a/GameData/Knes/Spaces/MultiRoleKapsule_IVA/mrk_DM-Internal.cfg
+++ b/GameData/Knes/Spaces/MultiRoleKapsule_IVA/mrk_DM-Internal.cfg
@@ -3,18 +3,44 @@ INTERNAL
 	name = MRKinternal
 	MODEL
 	{
-		model = Knes/Parts/MultiRoleKapsule/Assets/MRKinternal
+		model = Knes/Spaces/MultiRoleKapsule_IVA/_Knes_mrk_IVA
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Windows_side_collider
+		cameraTransformName = Windows_side
+	}	
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = Front_collider
+		cameraTransformName = Windows_Front
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = windows_collider_left
+		cameraTransformName = Windows_Left
+	}
+	MODULE
+	{
+		name = InternalCameraSwitch
+		colliderTransformName = windows_collider_right
+		cameraTransformName = Windows_Right
 	}
 	MODULE
 	{
 		name = InternalSeat
 		seatTransformName = kerbalSeat1
+		portraitCameraName = PilotCam1
 		allowCrewHelmet = true
 	}
 	MODULE
 	{
 		name = InternalSeat
 		seatTransformName = kerbalSeat2
+		portraitCameraName = PilotCam2
 		allowCrewHelmet = true
 	}
 	MODULE
@@ -31,583 +57,289 @@ INTERNAL
 	}
 	PROP
 	{
-		name = NF_SEAT_Crew
-		position = -0.7500012,-0.2999999,0.45
+		name = Knes_Seat_Pilot
+		position = 0.3,0.25,0.529
 		rotation = 0,1,0,0
-		scale = 1.000004,1.000001,1.000004
+		scale = 1,1,1
 	}
 	PROP
 	{
-		name = NF_SEAT_Pilot
-		position = 0.3000003,0.2500006,0.45
+		name = Knes_Seat_Pilot
+		position = -0.3,0.25,0.529
 		rotation = 0,1,0,0
-		scale = 1.000004,1.000001,1.000004
+		scale = 1,1,1
 	}
 	PROP
 	{
-		name = NF_SEAT_Crew
-		position = 0.7500012,-0.2999999,0.45
+		name = Knes_Seat_Passenger
+		position = 0.75,-0.3,0.529
 		rotation = 0,1,0,0
-		scale = 1.000004,1.000001,1.000004
+		scale = 1,1,1
 	}
 	PROP
 	{
-		name = NF_SEAT_Folding_Closed
-		position = -0.3000003,-0.8500003,0.45
+		name = Knes_Seat_Passenger
+		position = -0.75,-0.3,0.529
 		rotation = 0,1,0,0
-		scale = 1.000004,1.000001,1.000004
-	}
-	PROP
-	{
-		name = NF_SEAT_Folding_Closed
-		position = 0.3000003,-0.8500003,0.45
-		rotation = 0,1,0,0
-		scale = 1.000004,1.000001,1.000004
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_MFD_Large
-		position = 0.594,0.689,0.0845
-		rotation = -0.1409948,0.72367,0.6631215,0.129198
-		scale = 0.5000026,0.5000021,0.5000009
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_MFD_Small
-		position = -0.4015,0.6691,0.0367
-		rotation = -8.121494E-08,-0.7372773,-0.6755903,-6.053595E-08
-		scale = 1.000004,1.000004,1.000004
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_MFD_Small
-		position = -0.2878,0.6691,0.0367
-		rotation = -3.647722E-07,-0.7372773,-0.6755903,-4.116445E-07
-		scale = 1.000004,1.000004,1.000004
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_DigitalScreen_Velocity
-		position = 0.0270204,0.8462892,0.02224469
-		rotation = 2.594625E-08,0.7372773,0.6755902,3.72529E-08
-		scale = 1.000001,1.000003,1.000003
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_DigitalScreen_Time
-		position = 0.0270204,0.7450892,0.03104469
-		rotation = 2.594625E-08,0.7372773,0.6755902,3.72529E-08
-		scale = 1.000001,1.000003,1.000003
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_DigitalScreen_Altitude
-		position = 0.0270204,0.7718892,0.02864469
-		rotation = -2.68399E-07,0.7372773,0.6755903,-3.026798E-07
-		scale = 1.000001,1.000003,1.000003
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_DigitalScreen_Accel
-		position = 0.04590054,0.8195677,0.02464657
-		rotation = 2.594625E-08,0.7372773,0.6755902,3.72529E-08
-		scale = 1.000001,1.000003,1.000003
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_MFD_Tiny
-		position = 0.2269,0.784,0.0276
-		rotation = 9.695025E-08,-0.7372773,-0.6755903,1.350417E-07
-		scale = 1.000004,1.000004,1.000004
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_MFD_Power
-		position = 0.0314,0.5291,0.0499
-		rotation = 0.6755902,0,0,0.7372773
-		scale = 1.000001,1.000003,1.000003
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_MFD_Tiny
-		position = -0.0861,0.5287,0.0499
-		rotation = 1.644E-07,-0.7372772,-0.6755905,2.086163E-07
-		scale = 1.000004,1.000004,1.000004
-	}
-	PROP
-	{
-		name = NF_CRGO_Bag_Basic
-		position = 0,-0.375,0.401
-		rotation = 0,0.7071068,-0.7071068,0
-		scale = 1.000005,1.000002,1.000002
-	}
-	PROP
-	{
-		name = NF_CRGO_Bag_Basic
-		position = 0,0.0460003,0.4010003
-		rotation = 0.7071068,0,0,-0.7071068
-		scale = 1.000001,1.000002,1.000002
-	}
-	PROP
-	{
-		name = NF_CRGO_Bag_StockB
-		position = 0,-1.018001,0.01199937
-		rotation = 0.1736482,0,0,0.9848078
-		scale = 1.000002,1.000002,1
-	}
-	PROP
-	{
-		name = NF_CRGO_Bag_StockB
-		position = -0.5700006,-0.9340003,0.2926997
-		rotation = 0,0,-0.258819,0.9659259
-		scale = 1.000002,1.000001,1.000001
-	}
-	PROP
-	{
-		name = NF_CRGO_Bag_StockC
-		position = 0.5730006,-0.9293005,0.3075994
-		rotation = 0,0,0.258819,0.9659259
-		scale = 1.000002,1.000001,1.000001
-	}
-	PROP
-	{
-		name = NF_CRGO_Net_Short
-		position = -0.4000006,0.3980002,-0.3069999
-		rotation = 0,0,-0.9238795,0.3826835
-		scale = 0.5000017,1.000004,0.500001
-	}
-	PROP
-	{
-		name = NF_CRGO_Net_Short
-		position = -0.4000006,0.3979997,-0.8080003
-		rotation = 0,0,-0.9238795,0.3826835
-		scale = 0.5000017,1.000004,0.500001
-	}
-	PROP
-	{
-		name = NF_CRGO_Net_Short
-		position = -0.1870002,0.5389997,-0.8080003
-		rotation = 0,0,-0.9883615,0.1521234
-		scale = 0.5000014,1.000003,0.500001
-	}
-	PROP
-	{
-		name = NF_CRGO_Net_Short
-		position = -0.1870002,0.539,-0.3069999
-		rotation = 0,0,-0.9883615,0.1521234
-		scale = 0.5000014,1.000003,0.500001
-	}
-	PROP
-	{
-		name = NF_CRGO_Net_Short
-		position = -0.5410006,0.1869994,-0.8080006
-		rotation = 0,0,-0.8064446,0.5913097
-		scale = 0.5000011,1.000003,0.5000006
-	}
-	PROP
-	{
-		name = NF_CRGO_Net_Short
-		position = -0.5410006,0.1869999,-0.307
-		rotation = 0,0,-0.8064446,0.5913097
-		scale = 0.5000011,1.000003,0.5000006
-	}
-	PROP
-	{
-		name = NF_COMP_Laptop
-		position = 0.756,-0.0949,0.15
-		rotation = 0,-0.08715577,0,0.9961947
-		scale = 1.041127,1.000001,1.041126
-	}
-	PROP
-	{
-		name = NF_COMP_Arm_Base
-		position = 1.152,-0.003899843,0.334
-		rotation = 0,0,-0.7071068,-0.7071068
-		scale = 1.000002,1.000003,1.000001
-	}
-	PROP
-	{
-		name = NF_COMP_Arm
-		position = 0.969,1.490116E-07,0.339
-		rotation = 0,0.3826835,-0.9238795,0
-		scale = 1.000004,1.000003,1
-	}
-	PROP
-	{
-		name = NF_COMP_Arm_End
-		position = 0.974,-0.1165999,0.22
-		rotation = 0,0.7071068,-0.7071068,0
-		scale = 1.000005,1.000002,1.000002
-	}
-	PROP
-	{
-		name = NF_PAPR_Warning_Electrical
-		position = -0.1923,0.6076,-0.0318
-		rotation = 0,0.6755902,-0.7372773,0
-		scale = 1.000006,1.000003,1.000003
-	}
-	PROP
-	{
-		name = NF_PAPR_Warning_Electrical
-		position = 0.1886,0.6076,-0.0318
-		rotation = 0,0.6755902,-0.7372773,0
-		scale = 1.000006,1.000003,1.000003
-	}
-	PROP
-	{
-		name = NF_PAPR_PostIt_EmergencyOnly
-		position = 0.4399,0.0456,0.229
-		rotation = 0,0,-0.7071068,0.7071068
-		scale = 1.000002,1.000003,1.000001
-	}
-	PROP
-	{
-		name = NF_PAPR_PostIt_Directions
-		position = 0.1106,0.6808,0.0575
-		rotation = 0.6755902,0,0,0.7372773
-		scale = 1.000001,1.000003,1.000003
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_MFD_Bezels
-		position = 0.499,-0.349,-1.03
-		rotation = -0.2705981,0.6532812,-0.2705985,-0.6532816
-		scale = 1.000003,1.000004,1.000002
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_MFD_Small
-		position = 0.421,-0.425,-1.205
-		rotation = -0.2705981,0.6532813,-0.2705982,-0.6532816
-		scale = 1.000002,1.000001,1.000002
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_MFD_Small
-		position = -0.9849132,0.2129768,-0.1268895
-		rotation = 0.7354931,0.6549081,0.1042626,0.1388332
-		scale = 1.000003,1.000004,1.000003
+		scale = 1,1,1
 	}
 	PROP
 	{
 		name = NavBall
-		position = 0.0322,0.9396,-0.0048
+		position = 0.0322,0.9396,-0.0284
 		rotation = 0.7933533,0,0,0.6087615
 		scale = 1.750003,1.750005,1.750004
 	}
 	PROP
 	{
 		name = AltimeterThreeHands
-		position = -0.1640001,0.8068328,0.03363467
+		position = -0.1640001,0.8068328,0.01003467
 		rotation = -0.6755905,4.405155E-07,3.610194E-07,-0.7372771
 		scale = 1.500007,1.500007,1.500005
 	}
 	PROP
 	{
 		name = AtmosphereDepth
-		position = -0.0543,0.9359,0.0078
-		rotation = 6.755269E-08,0.7372772,0.6755905,9.685751E-08
+		position = -0.0543,0.9359,-0.0158
+		rotation = 6.755268E-08,0.7372772,0.6755905,9.685746E-08
 		scale = 1.400007,1.400006,1.400005
 	}
 	PROP
 	{
 		name = AxisIndicatorPitch
-		position = 0.2831,0.7841,0.0216
+		position = 0.2831,0.7841,-0.002
 		rotation = 0.6755902,0,0,0.7372773
 		scale = 1.000001,1.000003,1.000003
 	}
 	PROP
 	{
 		name = AxisIndicatorRoll
-		position = 0.3767,0.7611,0.0231
+		position = 0.3767,0.7611,-0.000500001
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000004,1.000004
 	}
 	PROP
 	{
 		name = AxisIndicatorYaw
-		position = 0.3372,0.7897,0.0199
+		position = 0.3372,0.7897,-0.003700001
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000004,1.000004
 	}
 	PROP
 	{
 		name = genericClusterSwitches06
-		position = 0.5712,0.7745,0.0687
+		position = 0.5712,0.7745,0.0451
 		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
 		scale = 1.000002,1.000003,1.000004
 	}
 	PROP
 	{
 		name = genericSwitchWithGuards
-		position = 0.652,0.7764,0.1014
+		position = 0.652,0.7764,0.07780001
 		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
 		scale = 1.000002,1.000003,1.000004
 	}
 	PROP
 	{
 		name = genericClusterMixed
-		position = 0.2916,0.5613,0.0442
+		position = 0.2916,0.5613,0.0206
 		rotation = -3.744982E-08,0.7372774,0.6755902,4.936009E-08
 		scale = 1.000003,1.000003,1.000003
 	}
 	PROP
 	{
 		name = genericClusterSwitches02
-		position = 0.5355,0.5809,0.071
+		position = 0.5355,0.5809,0.0474
 		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
 		scale = 0.5000029,0.5000032,0.5000019
 	}
 	PROP
 	{
 		name = genericClusterSwitches02
-		position = 0.6051,0.5834,0.0991
+		position = 0.6051,0.5834,0.0755
 		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
 		scale = 0.5000024,0.5000027,0.5000019
 	}
 	PROP
 	{
 		name = genericDirectionalKnob
-		position = 0.6569,0.5839,0.1201
+		position = 0.6569,0.5839,0.09649999
 		rotation = 0.6631215,-0.129198,0.1409948,0.7236701
 		scale = 0.7500025,0.7500035,0.7500025
 	}
 	PROP
 	{
-		name = NF_RPM_CNSL_MFD_Small
-		position = 0.2646,0.6691,0.0367
-		rotation = 1.644E-07,0.7372772,0.6755905,2.086163E-07
-		scale = 1.000004,1.000002,1.000002
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_MFD_Small
-		position = 0.3818,0.6691,0.0367
-		rotation = 1.644E-07,0.7372772,0.6755905,2.086163E-07
-		scale = 1.000004,1.000002,1.000002
-	}
-	PROP
-	{
 		name = RadarAltimeter
-		position = 0.1481,0.7835,0.0264
+		position = 0.1481,0.7835,0.002799999
 		rotation = 0.6755902,2.561137E-07,1.443761E-07,0.7372774
 		scale = 1.200002,1.200002,1.200002
 	}
 	PROP
 	{
 		name = throttle
-		position = 0.0005000001,0.3976211,0.1764199
+		position = 0.0005000001,0.3976211,0.1528199
 		rotation = 0.08021284,0,0,0.9967778
 		scale = 1.000001,1.000001,1.000001
 	}
 	PROP
 	{
 		name = squareButton
-		position = 0.3207,0.7613,0.0231
+		position = 0.3207,0.7613,-0.000500001
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000004,1.000004
 	}
 	PROP
 	{
 		name = pullSwitch
-		position = 0.2579,0.8365,0.0165
+		position = 0.2579,0.8365,-0.007100001
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000004,1.000004
 	}
 	PROP
 	{
 		name = pullSwitch
-		position = 0.2013,0.8365,0.0165
+		position = 0.2013,0.8365,-0.007100001
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000003,1.000003
 	}
 	PROP
 	{
 		name = squareButton
-		position = 0.2279,0.8377487,0.01641324
+		position = 0.2279,0.8377487,-0.007186761
 		rotation = 1.411569E-07,0.7372774,0.6755902,2.225861E-07
 		scale = 1.000003,1.000003,1.000003
 	}
 	PROP
 	{
 		name = squareButton
-		position = -0.0123,0.8196,0.018
+		position = -0.0123,0.8196,-0.005600002
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000003,1.000003
 	}
 	PROP
 	{
 		name = ledPanelSpeed
-		position = 0.1656,0.5197,0.0443
+		position = 0.1656,0.5197,0.0207
 		rotation = -0.6755902,4.554167E-07,2.930296E-07,-0.7372774
 		scale = 1.000004,1.000003,1.000003
 	}
 	PROP
 	{
 		name = standingSwitch
-		position = 0.0752,0.7983,0.0201
+		position = 0.0752,0.7983,-0.003500002
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000004,1.000004
 	}
 	PROP
 	{
 		name = standingSwitch
-		position = 0.0582,0.7983,0.0201
+		position = 0.0582,0.7983,-0.003500002
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000003,1.000003
 	}
 	PROP
 	{
 		name = standingSwitch
-		position = 0.0415,0.7983,0.0201
+		position = 0.0415,0.7983,-0.003500002
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000003,1.000003
 	}
 	PROP
 	{
 		name = standingSwitch
-		position = 0.0244,0.7983,0.0201
+		position = 0.0244,0.7983,-0.003500002
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000003,1.000003
 	}
 	PROP
 	{
 		name = standingSwitch
-		position = 0.0066,0.7983,0.0201
+		position = 0.0066,0.7983,-0.003500002
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000003,1.000003
 	}
 	PROP
 	{
 		name = standingSwitch
-		position = -0.0116,0.7983,0.0201
+		position = -0.0116,0.7983,-0.003500002
 		rotation = 0.4777144,0.5213339,0.4777144,0.5213339
 		scale = 1.000003,1.000003,1.000003
 	}
 	PROP
 	{
 		name = VSI
-		position = -0.2632,0.7902,0.0245
+		position = -0.2632,0.7902,0.0008999985
 		rotation = -0.6755902,-4.926696E-07,-5.257356E-07,-0.7372773
 		scale = 1.300003,1.300002,1.300002
 	}
 	PROP
 	{
 		name = genericClusterSwitches02
-		position = -0.1866,0.5428,0.0457
+		position = -0.1866,0.5428,0.0221
 		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
 		scale = 0.700002,0.700001,0.7000011
 	}
 	PROP
 	{
 		name = genericClusterSwitches07
-		position = -0.3376,0.767,0.0261
+		position = -0.3376,0.767,0.002499999
 		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
 		scale = 0.700002,0.700001,0.7000011
 	}
 	PROP
 	{
 		name = genericClusterSwitches07
-		position = -0.3907,0.767,0.0261
+		position = -0.3907,0.767,0.002499999
 		rotation = 0.6755903,3.054738E-07,3.290146E-07,0.7372773
 		scale = 0.7000021,0.700002,0.7000018
 	}
 	PROP
 	{
 		name = genericDirectionalKnob2
-		position = 0.1296,0.7218,0.033
+		position = 0.1296,0.7218,0.009399999
 		rotation = 0.6755902,0,0,0.7372773
 		scale = 1.000001,1.000003,1.000003
 	}
 	PROP
 	{
 		name = genericDirectionalKnob2
-		position = -0.3455,0.5622,0.0469
+		position = -0.3455,0.5622,0.0233
 		rotation = 0.6525702,-0.1908207,-0.1748552,0.7121553
 		scale = 1.000002,1.000003,1.000002
 	}
 	PROP
 	{
 		name = genericDirectionalKnob2
-		position = -0.2604,0.5624,0.047
+		position = -0.2604,0.5624,0.0234
 		rotation = 1.772724E-10,0.7372773,0.6755903,2.514571E-08
 		scale = 1.000004,1.000003,1.000003
 	}
 	PROP
 	{
 		name = genericDirectionalKnob2
-		position = -0.3028,0.5623,0.0469
+		position = -0.3028,0.5623,0.0233
 		rotation = 0.2585371,-0.6811554,-0.624164,0.2821439
 		scale = 1.000003,1.000002,1.000003
 	}
 	PROP
 	{
 		name = genericClusterKnobs
-		position = -0.0427,0.7931,0.027
+		position = -0.0427,0.7931,0.0034
 		rotation = 0.4777143,0.521334,0.4777147,0.5213336
 		scale = 0.8000011,0.8000011,0.8000016
 	}
 	PROP
 	{
 		name = genericClusterKnobs
-		position = -0.0765,0.7949,0.0268
+		position = -0.0765,0.7949,0.003199998
 		rotation = -0.4777147,0.5213336,0.4777144,-0.5213339
 		scale = 0.800002,0.800002,0.8000023
 	}
 	PROP
 	{
-		name = NF_RPM_CNSL_MFD_FuelStock
-		position = -0.0003,0.6605,0.0387
-		rotation = 0.6755902,0,0,0.7372773
-		scale = 0.9000024,0.900004,0.9000027
-	}
-	PROP
-	{
-		name = NF_RPM_CNSL_MFD_Small
-		position = -0.174,0.6691,0.0367
-		rotation = -3.647722E-07,-0.7372773,-0.6755903,-4.116445E-07
-		scale = 1.000001,1,1
-	}
-	PROP
-	{
 		name = genericClusterSwitches07
-		position = 0.1775,0.7192,0.0303
+		position = 0.1775,0.7192,0.0067
 		rotation = -3.250736E-07,0.7372773,0.6755902,-2.80328E-07
 		scale = 0.7,0.7000001,0.7000001
-	}
-	PROP
-	{
-		name = NF_LGHT_Box_Small
-		position = -0.003,1.1338,0.4124
-		rotation = 0.7071068,-7.522766E-09,-0.7071068,7.522766E-09
-		scale = 0.9000024,0.900004,0.9000027
-	}
-	PROP
-	{
-		name = IndicatorPanelRPM
-		position = 0.159,0.623,0.0455
-		rotation = -0.6755904,8.381904E-08,-4.593903E-08,-0.7372772
-		scale = 1.200004,1.200002,1.200003
-	}
-	PROP
-	{
-		name = JSIInternalFlagPlate
-		position = 0.143,0.8456,0.0261
-		rotation = -0.6755904,8.381904E-08,-4.593903E-08,-0.7372772
-		scale = 0.75,0.75,0.75
-	}
-	PROP
-	{
-		name = NF_HTCH_IVA_Basic
-		position = 0,0,-1.311
-		rotation = 0.270598,-0.6532812,-0.6532819,0.2705978
-		scale = 1.200001,1.2,1.200001
-	}
-	PROP
-	{
-		name = NF_SEAT_Pilot
-		position = -0.3000003,0.2500006,0.45
-		rotation = 0,1,0,0
-		scale = 1.000004,1.000001,1.000004
 	}
 }
